src/objects/QPMS__Job_Function__c.object
<CustomObject>
    <description>This stores the job function information. We can associate courses, documents, person profiles with each job function.</description>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>This field holds allowdays for current approval of this record</description>
        <inlineHelpText>This field holds allowdays for current approval of this record</inlineHelpText>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JobFunction</fullName>
                </value>
                <value>
                    <fullName>JobApproval</fullName>
                </value>
                <value>
                    <fullName>JobFunctionStatusChange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>For approver group</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this filed is used to store approval relate information.</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver look up 2</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Functions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver look up 3</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Functions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver look up 4</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Functions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver look up 1</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Batch_Status__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inprocess</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ClonedByJobFunction__c</fullName>
        <label>ClonedByJobFunction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Courses__c</fullName>
        <description>this field is used to store courses</description>
        <label>Courses</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Coursesession__c</fullName>
        <label>Coursesession</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_By__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>This field holds the sequence of the current approver who is supposed to approve the record</description>
        <inlineHelpText>This field holds the sequence of the current approver who is supposed to approve the record</inlineHelpText>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Detail__c</fullName>
        <description>this field is used to store the job function description</description>
        <label>Detail</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Documents__c</fullName>
        <description>this is used store job function related  documents</description>
        <label>Documents</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__For_Non_Licensed_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Job Function for Non Licensed users</description>
        <inlineHelpText>Allow Job Function for Non Licensed users</inlineHelpText>
        <label>For Non-Licensed User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Hold the initial submitter</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_FunctionsMwyX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Name__c</fullName>
        <formula>QPMS__Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <defaultValue>&apos;Global_Quality_Group&apos;</defaultValue>
        <description>Initiating Site Security</description>
        <inlineHelpText>Initiating Site Security</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initiating Site</description>
        <inlineHelpText>Initiating Site</inlineHelpText>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Job Functions</relationshipLabel>
        <relationshipName>Job_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__JobFunction_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JobFunction Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Job_Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>This field stores notes for approvers when this record submitted for approval</description>
        <inlineHelpText>This field stores notes for approvers when this record submitted for approval</inlineHelpText>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__PersonProfile__c</fullName>
        <label>PersonProfile</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__RecordCloneId__c</fullName>
        <label>RecordCloneId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>Holds the sequence values for approval of this record</description>
        <inlineHelpText>Holds the sequence values for approval of this record</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Show_All_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field is used store job function status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>InReview</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>User cannot modify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                    <default>true</default>
                    <label>Course</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that record is locked or not( in approval process )</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Function</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Title__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__PersonProfile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TJ-{00000}</displayFormat>
        <label>Job Function Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>